syntax = "proto3";

package messenger;

import "google/protobuf/timestamp.proto";


message User {
  string id = 1;
  string email = 2;
}

message Chat {
  string id = 1;
  User user = 2;
  string userId = 3;
  string text = 4;
  string mediaUrl = 5;
  MessageType type = 6;
  string replyTo = 7;
  google.protobuf.Timestamp readAt = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
  google.protobuf.Timestamp deletedAt = 11;
}

enum MessageType {
  UNKNOWN = 0;
  TEXT = 1;
  IMAGE = 2;
  VIDEO = 3;
}

message CreateChatRequest {
  User user = 1;
  string text = 2;
  string mediaUrl = 3;
  MessageType type = 4;
  string replyTo = 5;
}

message GetChatRequest {
  string id = 1;
}


service ChatService {
  rpc CreateChat(stream CreateChatRequest) returns (stream Chat) {}
  rpc GetChat(GetChatRequest) returns (stream Chat) {}
}
